[package]
name = "comma"
version = "0.16.5"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
atty = "0.2"
crossterm = "0.28"
rustyline = "15"

[profile.release]
strip = true
opt-level = "z"
lto = true
